--- a/prepros.config
+++ b/prepros.config
@@ -927,6 +927,17 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "css/media.css",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          }
+        }
+      }
+    ]
   }
 }
